--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,23 @@
             "server": "localhost",
             "port": 3306,
             "driver": "MySQL",
-            "name": "test",
-            "database": "airbnb",
+            "name": "account",
+            "database": "users",
             "username": "root",
             "password": "09082005"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "users",
+            "database": "account",
+            "username": "root"
         }
     ]
 }
